--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,11 +4,6 @@ services:
   todo.api:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=https://+:443;http://+:80
-      - ASPNETCORE_HTTPS_PORT=44315
+      - ASPNETCORE_URLS=http://+:80
     ports:
-      - "49851:80"
-      - "44315:443"
-    volumes:
-      - ~/.aspnet/https:/root/.aspnet/https:ro
-      - ~/.microsoft/usersecrets:/root/.microsoft/usersecrets:ro
+      - "7001:80"
